kubernetes/kustomizations/blog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zmuda-pro-blog-http
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: http
  type: ClusterIP
