kubernetes/kustomizations/blog/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zmuda-pro-blog
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zmuda.pro
      secretName: zmuda-pro-blog-tls
  rules:
    - host: zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zmuda-pro-blog-http
                port:
                  number: 8080
